--- a/cpp/open3d/visualization/gui/CMakeLists.txt
+++ b/cpp/open3d/visualization/gui/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(GUI PRIVATE
     Font.cpp
     GLFWWindowSystem.cpp
     Gui.cpp
+    Histogram.cpp
     ImageWidget.cpp
     ImguiFilamentBridge.cpp
     Label.cpp
