--- a/docker/Dockerfile.wheel
+++ b/docker/Dockerfile.wheel
@@ -96,8 +96,8 @@ RUN which python \
 
 # Checkout Open3D-ML main branch
 # TODO: We may add support for local Open3D-ML repo or pinned ML repo tag
-ENV OPEN3D_ML_ROOT=/root/Open3D-ML
-RUN git clone https://github.com/isl-org/Open3D-ML.git ${OPEN3D_ML_ROOT}
+# ENV OPEN3D_ML_ROOT=/root/Open3D-ML
+# RUN git clone https://github.com/isl-org/Open3D-ML.git ${OPEN3D_ML_ROOT}
 
 # Open3D C++ dependencies
 # Done before copying the full Open3D directory for better Docker caching
@@ -114,12 +114,12 @@ RUN source /root/Open3D/util/ci_utils.sh \
  && install_python_dependencies with-cuda with-jupyter
 
 # Open3D Jupyter dependencies
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
- && apt-get install -y nodejs \
- && rm -rf /var/lib/apt/lists/* \
- && node --version
-RUN npm install -g yarn \
- && yarn --version
+# RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
+#  && apt-get install -y nodejs \
+#  && rm -rf /var/lib/apt/lists/* \
+#  && node --version
+# RUN npm install -g yarn \
+#  && yarn --version
 
 # Open3D repo
 # Always keep /root/Open3D as the WORKDIR
@@ -130,7 +130,7 @@ WORKDIR /root/Open3D
 RUN export NPROC=$(nproc) \
  && export BUILD_SHARED_LIBS=OFF \
  && source /root/Open3D/util/ci_utils.sh \
- && build_pip_package build_azure_kinect build_jupyter
+ && build_pip_package
 
 # Compress ccache folder, move to / directory
 RUN ccache -s \
